# django-template

./: .gitignore  LICENSE  Pipfile  README.md  package.json  pyproject.toml  webpack.config.js
assets/: app.js
config/settings/: __init__.py  base.py  drf.py
config/settings/platform/: dev.py  local.py
